# stim-proto

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: ci.yml  guard.yml  publish-npm.yml
crates/stim-proto/: Cargo.toml
crates/stim-proto/src/: content.rs  control_plane.rs  delivery.rs  discovery.rs  ids.rs  lib.rs  message.rs  message_facts.rs  reply.rs
crates/stim-proto/tests/: contracts.rs  message_facts.rs
docs/: message-ledger-contract.md
scripts/: guard.sh
