[package]
name = "stim-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared protocol contracts for stim.io participants"

[lib]
name = "stim_proto"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }
